--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -7,20 +7,28 @@ for IQUAD Learning Solution and our website; http://Madrasatie.com. This privacy
 solely to information collected by this website, except where stated otherwise. It will notify you of
 the following: What information we collect; With whom it is shared; How it can be corrected; How it
 is secured; How policy changes will be communicated; and How to address concerns over misuse of
-personal data.   
+personal data. 
+  </p>
+  <p style = "margin-left: 50px; margin-right: 50px; font-size: 20px;">
   Information Collection, Use, and Sharing  We only have access to/collect information
 that the School gives us. We will not sell or rent this information to anyone.  We will use your
 information to respond to you, regarding the reason you contacted us and how you are using the site or Mobile Application. 
+    </p>
+  <p style = "margin-left: 50px; margin-right: 50px; font-size: 20px;">
   We will not share your information with any third party outside of our
 organization, other than as necessary to fulfill your request. Unless you ask us not to, we may
 contact you via email in the future to tell you about specials, new products or services, or changes to
 this privacy policy.  
+    </p>
+  <p style = "margin-left: 50px; margin-right: 50px; font-size: 20px;">
   Your Access to and Control Over Information  You can do the following at any
 time by contacting the School from which you have got your login details: See what data they have
 about if any. Change/correct any data they have about you. Have us delete any data they have about
 you. Express any concern you have about our use of your data   Registration  In order to use this
 website, a user must get login details from the School.  
-Cookies  We use \"cookies\" on this site. A cookie is a piece of data stored on a site visitor&#39;s hard drive to help us improve your access to
+    </p>
+  <p style = "margin-left: 50px; margin-right: 50px; font-size: 20px;">
+    Cookies  We use \"cookies\" on this site. A cookie is a piece of data stored on a site visitor&#39;s hard drive to help us improve your access to
 our site and identify repeat visitors to our site. For instance, when we use a cookie to identify you,
 you would not have to log in a password more than once, thereby saving time while on our site.
 Cookies can also enable us to track and target the interests of our users to enhance their experience
@@ -30,12 +38,16 @@ have no access to or control over these cookies. Links This website contains lin
 Please be aware that we are not responsible for the content or privacy practices of such other sites.
 We encourage our users to be aware when they leave our site and to read the privacy statements of
 any other site that collects personally identifiable information.   
+    </p>
+  <p style = "margin-left: 50px; margin-right: 50px; font-size: 20px;">
   Surveys & Contests  From time-to-time, our site requests information via surveys or contests. Participation in these surveys or contests
 is completely voluntary and you may choose whether or not to participate and therefore disclose
 this information. Information requested may include contact information (such as name and
 shipping address), and demographic information (such as zip code, age level). Contact information
 will be used to notify the winners and award prizes. Survey information will be used for purposes of
 monitoring or improving the use and satisfaction of this site.   
+    </p>
+  <p style = "margin-left: 50px; margin-right: 50px; font-size: 20px;">
   If you feel that we are not abiding by
 this privacy policy, you should contact us immediately via telephone at +961 1 292248 or via email at
 iquad@iquadme.com.
